added reset button to ui

--- a/sandpile3d.html
+++ b/sandpile3d.html
@@ -11,6 +11,12 @@
 		<script src="sandpile_3d.js"></script>
 	</head>
 	<body>
-		<canvas width=600 height=600 id="canvas"></canvas>
+		<center>
+			<canvas width=600 height=600 id="canvas"></canvas>
+			<div>
+				<!--Size<input type=number id="size"/>-->
+				<button id="reset-button">Reset</button>
+			</div>
+		</center>
 	</body>
 </html>
