added ui functionality to change sandpile size

--- a/sandpile3d.html
+++ b/sandpile3d.html
@@ -15,8 +15,11 @@
 			<canvas width=600 height=600 id="canvas"></canvas>
 			<div>
 				<!--Size<input type=number id="size"/>-->
-				<button id="reset-button">Reset</button>
+				X=<input type="number" id="x-dim" value="11"/>
+				Y=<input type="number" id="y-dim" value="11"/>
+				Z=<input type="number" id="z-dim" value="11"/>
 			</div>
+			<button id="reset-button">Reset</button>
 		</center>
 	</body>
 </html>
