Simplified reset options

--- a/sandpile3d.html
+++ b/sandpile3d.html
@@ -14,10 +14,10 @@
 		<center>
 			<canvas width=600 height=600 id="canvas"></canvas>
 			<div>
-				<!--Size<input type=number id="size"/>-->
-				X=<input type="number" id="x-dim" value="11"/>
+				Size<input type=number id="size" value=11 />
+				<!--X=<input type="number" id="x-dim" value="11"/>
 				Y=<input type="number" id="y-dim" value="11"/>
-				Z=<input type="number" id="z-dim" value="11"/>
+				Z=<input type="number" id="z-dim" value="11"/>-->
 			</div>
 			<button id="reset-button">Reset</button>
 		</center>
